<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:id="@+id/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/descript_view"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:text="@string/port_wizard"
            android:textSize="34sp"
            android:textAlignment="viewStart"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/switch_modes"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/manual"
            android:textAlignment="center"
            android:textSize="13sp"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/wizard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>